Project 2/parser.output
Grammar

    0 $accept: function $end

    1 function: function_header optional_variables body

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';'

    3 optional_variables: optional_variable optional_variables
    4                   | ε

    5 optional_variable: variable
    6                  | error ';'

    7 optional_parameters: optional_parameters parameter_
    8                    | ε

    9 parameter_: parameter
   10           | error ';'

   11 parameter: IDENTIFIER ':' type
   12          | parameter ','

   13 variable: IDENTIFIER ':' type IS statement_

   14 type: INTEGER
   15     | REAL
   16     | BOOLEAN

   17 body: BEGIN_ statement_ END ';'

   18 statement_: statement ';'
   19           | error ';'

   20 statement: expression
   21          | REDUCE operator reductions ENDREDUCE
   22          | IF expression THEN statement_ ELSE statement_ ENDIF
   23          | CASE expression IS cases_ OTHERS ARROW statement_ ENDCASE

   24 operator: OROP
   25         | ADDOP
   26         | MULOP
   27         | REMOP
   28         | EXPOP

   29 reductions: reductions statement_
   30           | ε

   31 cases_: cases
   32       | error ';'

   33 cases: cases WHEN INT_LITERAL ARROW statement_
   34      | ε

   35 expression: expression OROP andoptest
   36           | andoptest

   37 andoptest: andoptest ANDOP relation
   38          | relation

   39 relation: relation RELOP term
   40         | term

   41 term: term ADDOP factor
   42     | factor

   43 factor: factor MULOP exptest
   44       | factor REMOP exptest
   45       | exptest

   46 exptest: primary EXPOP exptest
   47        | primary

   48 primary: '(' expression ')'
   49        | NOTOP primary
   50        | INT_LITERAL
   51        | REAL_LITERAL
   52        | BOOL_LITERAL
   53        | IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 48
    ')' (41) 48
    ',' (44) 12
    ':' (58) 11 13
    ';' (59) 2 6 10 17 18 19 32
    error (256) 6 10 19 32
    ADDOP (258) 25 41
    MULOP (259) 26 43
    ANDOP (260) 37
    RELOP (261) 39
    BEGIN_ (262) 17
    BOOLEAN (263) 16
    END (264) 17
    ENDREDUCE (265) 21
    FUNCTION (266) 2
    INTEGER (267) 14
    IS (268) 13 23
    REDUCE (269) 21
    RETURNS (270) 2
    IDENTIFIER (271) 2 11 13 53
    INT_LITERAL (272) 33 50
    ARROW (273) 23 33
    CASE (274) 23
    ELSE (275) 22
    ENDCASE (276) 23
    ENDIF (277) 22
    IF (278) 22
    OTHERS (279) 23
    REAL (280) 15
    THEN (281) 22
    WHEN (282) 33
    OROP (283) 24 35
    NOTOP (284) 49
    EXPOP (285) 28 46
    REAL_LITERAL (286) 51
    BOOL_LITERAL (287) 52
    REMOP (288) 27 44


Nonterminals, with rules where they appear

    $accept (39)
        on left: 0
    function (40)
        on left: 1
        on right: 0
    function_header (41)
        on left: 2
        on right: 1
    optional_variables (42)
        on left: 3 4
        on right: 1 3
    optional_variable (43)
        on left: 5 6
        on right: 3
    optional_parameters (44)
        on left: 7 8
        on right: 2 7
    parameter_ (45)
        on left: 9 10
        on right: 7
    parameter (46)
        on left: 11 12
        on right: 9 12
    variable (47)
        on left: 13
        on right: 5
    type (48)
        on left: 14 15 16
        on right: 2 11 13
    body (49)
        on left: 17
        on right: 1
    statement_ (50)
        on left: 18 19
        on right: 13 17 22 23 29 33
    statement (51)
        on left: 20 21 22 23
        on right: 18
    operator (52)
        on left: 24 25 26 27 28
        on right: 21
    reductions (53)
        on left: 29 30
        on right: 21 29
    cases_ (54)
        on left: 31 32
        on right: 23
    cases (55)
        on left: 33 34
        on right: 31 33
    expression (56)
        on left: 35 36
        on right: 20 22 23 35 48
    andoptest (57)
        on left: 37 38
        on right: 35 36 37
    relation (58)
        on left: 39 40
        on right: 37 38 39
    term (59)
        on left: 41 42
        on right: 39 40 41
    factor (60)
        on left: 43 44 45
        on right: 41 42 43 44
    exptest (61)
        on left: 46 47
        on right: 43 44 45 46
    primary (62)
        on left: 48 49 50 51 52 53
        on right: 46 47 49


State 0

    0 $accept: • function $end

    FUNCTION  shift, and go to state 1

    function         go to state 2
    function_header  go to state 3


State 1

    2 function_header: FUNCTION • IDENTIFIER optional_parameters RETURNS type ';'

    IDENTIFIER  shift, and go to state 4


State 2

    0 $accept: function • $end

    $end  shift, and go to state 5


State 3

    1 function: function_header • optional_variables body

    error       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7

    BEGIN_  reduce using rule 4 (optional_variables)

    optional_variables  go to state 8
    optional_variable   go to state 9
    variable            go to state 10


State 4

    2 function_header: FUNCTION IDENTIFIER • optional_parameters RETURNS type ';'

    $default  reduce using rule 8 (optional_parameters)

    optional_parameters  go to state 11


State 5

    0 $accept: function $end •

    $default  accept


State 6

    6 optional_variable: error • ';'

    ';'  shift, and go to state 12


State 7

   13 variable: IDENTIFIER • ':' type IS statement_

    ':'  shift, and go to state 13


State 8

    1 function: function_header optional_variables • body

    BEGIN_  shift, and go to state 14

    body  go to state 15


State 9

    3 optional_variables: optional_variable • optional_variables

    error       shift, and go to state 6
    IDENTIFIER  shift, and go to state 7

    BEGIN_  reduce using rule 4 (optional_variables)

    optional_variables  go to state 16
    optional_variable   go to state 9
    variable            go to state 10


State 10

    5 optional_variable: variable •

    $default  reduce using rule 5 (optional_variable)


State 11

    2 function_header: FUNCTION IDENTIFIER optional_parameters • RETURNS type ';'
    7 optional_parameters: optional_parameters • parameter_

    error       shift, and go to state 17
    RETURNS     shift, and go to state 18
    IDENTIFIER  shift, and go to state 19

    parameter_  go to state 20
    parameter   go to state 21


State 12

    6 optional_variable: error ';' •

    $default  reduce using rule 6 (optional_variable)


State 13

   13 variable: IDENTIFIER ':' • type IS statement_

    BOOLEAN  shift, and go to state 22
    INTEGER  shift, and go to state 23
    REAL     shift, and go to state 24

    type  go to state 25


State 14

   17 body: BEGIN_ • statement_ END ';'

    error         shift, and go to state 26
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 36
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 15

    1 function: function_header optional_variables body •

    $default  reduce using rule 1 (function)


State 16

    3 optional_variables: optional_variable optional_variables •

    $default  reduce using rule 3 (optional_variables)


State 17

   10 parameter_: error • ';'

    ';'  shift, and go to state 45


State 18

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS • type ';'

    BOOLEAN  shift, and go to state 22
    INTEGER  shift, and go to state 23
    REAL     shift, and go to state 24

    type  go to state 46


State 19

   11 parameter: IDENTIFIER • ':' type

    ':'  shift, and go to state 47


State 20

    7 optional_parameters: optional_parameters parameter_ •

    $default  reduce using rule 7 (optional_parameters)


State 21

    9 parameter_: parameter •
   12 parameter: parameter • ','

    ','  shift, and go to state 48

    $default  reduce using rule 9 (parameter_)


State 22

   16 type: BOOLEAN •

    $default  reduce using rule 16 (type)


State 23

   14 type: INTEGER •

    $default  reduce using rule 14 (type)


State 24

   15 type: REAL •

    $default  reduce using rule 15 (type)


State 25

   13 variable: IDENTIFIER ':' type • IS statement_

    IS  shift, and go to state 49


State 26

   19 statement_: error • ';'

    ';'  shift, and go to state 50


State 27

   21 statement: REDUCE • operator reductions ENDREDUCE

    ADDOP  shift, and go to state 51
    MULOP  shift, and go to state 52
    OROP   shift, and go to state 53
    EXPOP  shift, and go to state 54
    REMOP  shift, and go to state 55

    operator  go to state 56


State 28

   53 primary: IDENTIFIER •

    $default  reduce using rule 53 (primary)


State 29

   50 primary: INT_LITERAL •

    $default  reduce using rule 50 (primary)


State 30

   23 statement: CASE • expression IS cases_ OTHERS ARROW statement_ ENDCASE

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    expression  go to state 57
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 31

   22 statement: IF • expression THEN statement_ ELSE statement_ ENDIF

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    expression  go to state 58
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 32

   49 primary: NOTOP • primary

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    primary  go to state 59


State 33

   51 primary: REAL_LITERAL •

    $default  reduce using rule 51 (primary)


State 34

   52 primary: BOOL_LITERAL •

    $default  reduce using rule 52 (primary)


State 35

   48 primary: '(' • expression ')'

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    expression  go to state 60
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 36

   17 body: BEGIN_ statement_ • END ';'

    END  shift, and go to state 61


State 37

   18 statement_: statement • ';'

    ';'  shift, and go to state 62


State 38

   20 statement: expression •
   35 expression: expression • OROP andoptest

    OROP  shift, and go to state 63

    $default  reduce using rule 20 (statement)


State 39

   36 expression: andoptest •
   37 andoptest: andoptest • ANDOP relation

    ANDOP  shift, and go to state 64

    $default  reduce using rule 36 (expression)


State 40

   38 andoptest: relation •
   39 relation: relation • RELOP term

    RELOP  shift, and go to state 65

    $default  reduce using rule 38 (andoptest)


State 41

   40 relation: term •
   41 term: term • ADDOP factor

    ADDOP  shift, and go to state 66

    $default  reduce using rule 40 (relation)


State 42

   42 term: factor •
   43 factor: factor • MULOP exptest
   44       | factor • REMOP exptest

    MULOP  shift, and go to state 67
    REMOP  shift, and go to state 68

    $default  reduce using rule 42 (term)


State 43

   45 factor: exptest •

    $default  reduce using rule 45 (factor)


State 44

   46 exptest: primary • EXPOP exptest
   47        | primary •

    EXPOP  shift, and go to state 69

    $default  reduce using rule 47 (exptest)


State 45

   10 parameter_: error ';' •

    $default  reduce using rule 10 (parameter_)


State 46

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type • ';'

    ';'  shift, and go to state 70


State 47

   11 parameter: IDENTIFIER ':' • type

    BOOLEAN  shift, and go to state 22
    INTEGER  shift, and go to state 23
    REAL     shift, and go to state 24

    type  go to state 71


State 48

   12 parameter: parameter ',' •

    $default  reduce using rule 12 (parameter)


State 49

   13 variable: IDENTIFIER ':' type IS • statement_

    error         shift, and go to state 26
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 72
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 50

   19 statement_: error ';' •

    $default  reduce using rule 19 (statement_)


State 51

   25 operator: ADDOP •

    $default  reduce using rule 25 (operator)


State 52

   26 operator: MULOP •

    $default  reduce using rule 26 (operator)


State 53

   24 operator: OROP •

    $default  reduce using rule 24 (operator)


State 54

   28 operator: EXPOP •

    $default  reduce using rule 28 (operator)


State 55

   27 operator: REMOP •

    $default  reduce using rule 27 (operator)


State 56

   21 statement: REDUCE operator • reductions ENDREDUCE

    $default  reduce using rule 30 (reductions)

    reductions  go to state 73


State 57

   23 statement: CASE expression • IS cases_ OTHERS ARROW statement_ ENDCASE
   35 expression: expression • OROP andoptest

    IS    shift, and go to state 74
    OROP  shift, and go to state 63


State 58

   22 statement: IF expression • THEN statement_ ELSE statement_ ENDIF
   35 expression: expression • OROP andoptest

    THEN  shift, and go to state 75
    OROP  shift, and go to state 63


State 59

   49 primary: NOTOP primary •

    $default  reduce using rule 49 (primary)


State 60

   35 expression: expression • OROP andoptest
   48 primary: '(' expression • ')'

    OROP  shift, and go to state 63
    ')'   shift, and go to state 76


State 61

   17 body: BEGIN_ statement_ END • ';'

    ';'  shift, and go to state 77


State 62

   18 statement_: statement ';' •

    $default  reduce using rule 18 (statement_)


State 63

   35 expression: expression OROP • andoptest

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    andoptest  go to state 78
    relation   go to state 40
    term       go to state 41
    factor     go to state 42
    exptest    go to state 43
    primary    go to state 44


State 64

   37 andoptest: andoptest ANDOP • relation

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    relation  go to state 79
    term      go to state 41
    factor    go to state 42
    exptest   go to state 43
    primary   go to state 44


State 65

   39 relation: relation RELOP • term

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    term     go to state 80
    factor   go to state 42
    exptest  go to state 43
    primary  go to state 44


State 66

   41 term: term ADDOP • factor

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    factor   go to state 81
    exptest  go to state 43
    primary  go to state 44


State 67

   43 factor: factor MULOP • exptest

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    exptest  go to state 82
    primary  go to state 44


State 68

   44 factor: factor REMOP • exptest

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    exptest  go to state 83
    primary  go to state 44


State 69

   46 exptest: primary EXPOP • exptest

    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    exptest  go to state 84
    primary  go to state 44


State 70

    2 function_header: FUNCTION IDENTIFIER optional_parameters RETURNS type ';' •

    $default  reduce using rule 2 (function_header)


State 71

   11 parameter: IDENTIFIER ':' type •

    $default  reduce using rule 11 (parameter)


State 72

   13 variable: IDENTIFIER ':' type IS statement_ •

    $default  reduce using rule 13 (variable)


State 73

   21 statement: REDUCE operator reductions • ENDREDUCE
   29 reductions: reductions • statement_

    error         shift, and go to state 26
    ENDREDUCE     shift, and go to state 85
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 86
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 74

   23 statement: CASE expression IS • cases_ OTHERS ARROW statement_ ENDCASE

    error  shift, and go to state 87

    OTHERS  reduce using rule 34 (cases)
    WHEN    reduce using rule 34 (cases)

    cases_  go to state 88
    cases   go to state 89


State 75

   22 statement: IF expression THEN • statement_ ELSE statement_ ENDIF

    error         shift, and go to state 26
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 90
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 76

   48 primary: '(' expression ')' •

    $default  reduce using rule 48 (primary)


State 77

   17 body: BEGIN_ statement_ END ';' •

    $default  reduce using rule 17 (body)


State 78

   35 expression: expression OROP andoptest •
   37 andoptest: andoptest • ANDOP relation

    ANDOP  shift, and go to state 64

    $default  reduce using rule 35 (expression)


State 79

   37 andoptest: andoptest ANDOP relation •
   39 relation: relation • RELOP term

    RELOP  shift, and go to state 65

    $default  reduce using rule 37 (andoptest)


State 80

   39 relation: relation RELOP term •
   41 term: term • ADDOP factor

    ADDOP  shift, and go to state 66

    $default  reduce using rule 39 (relation)


State 81

   41 term: term ADDOP factor •
   43 factor: factor • MULOP exptest
   44       | factor • REMOP exptest

    MULOP  shift, and go to state 67
    REMOP  shift, and go to state 68

    $default  reduce using rule 41 (term)


State 82

   43 factor: factor MULOP exptest •

    $default  reduce using rule 43 (factor)


State 83

   44 factor: factor REMOP exptest •

    $default  reduce using rule 44 (factor)


State 84

   46 exptest: primary EXPOP exptest •

    $default  reduce using rule 46 (exptest)


State 85

   21 statement: REDUCE operator reductions ENDREDUCE •

    $default  reduce using rule 21 (statement)


State 86

   29 reductions: reductions statement_ •

    $default  reduce using rule 29 (reductions)


State 87

   32 cases_: error • ';'

    ';'  shift, and go to state 91


State 88

   23 statement: CASE expression IS cases_ • OTHERS ARROW statement_ ENDCASE

    OTHERS  shift, and go to state 92


State 89

   31 cases_: cases •
   33 cases: cases • WHEN INT_LITERAL ARROW statement_

    WHEN  shift, and go to state 93

    $default  reduce using rule 31 (cases_)


State 90

   22 statement: IF expression THEN statement_ • ELSE statement_ ENDIF

    ELSE  shift, and go to state 94


State 91

   32 cases_: error ';' •

    $default  reduce using rule 32 (cases_)


State 92

   23 statement: CASE expression IS cases_ OTHERS • ARROW statement_ ENDCASE

    ARROW  shift, and go to state 95


State 93

   33 cases: cases WHEN • INT_LITERAL ARROW statement_

    INT_LITERAL  shift, and go to state 96


State 94

   22 statement: IF expression THEN statement_ ELSE • statement_ ENDIF

    error         shift, and go to state 26
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 97
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 95

   23 statement: CASE expression IS cases_ OTHERS ARROW • statement_ ENDCASE

    error         shift, and go to state 26
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 98
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 96

   33 cases: cases WHEN INT_LITERAL • ARROW statement_

    ARROW  shift, and go to state 99


State 97

   22 statement: IF expression THEN statement_ ELSE statement_ • ENDIF

    ENDIF  shift, and go to state 100


State 98

   23 statement: CASE expression IS cases_ OTHERS ARROW statement_ • ENDCASE

    ENDCASE  shift, and go to state 101


State 99

   33 cases: cases WHEN INT_LITERAL ARROW • statement_

    error         shift, and go to state 26
    REDUCE        shift, and go to state 27
    IDENTIFIER    shift, and go to state 28
    INT_LITERAL   shift, and go to state 29
    CASE          shift, and go to state 30
    IF            shift, and go to state 31
    NOTOP         shift, and go to state 32
    REAL_LITERAL  shift, and go to state 33
    BOOL_LITERAL  shift, and go to state 34
    '('           shift, and go to state 35

    statement_  go to state 102
    statement   go to state 37
    expression  go to state 38
    andoptest   go to state 39
    relation    go to state 40
    term        go to state 41
    factor      go to state 42
    exptest     go to state 43
    primary     go to state 44


State 100

   22 statement: IF expression THEN statement_ ELSE statement_ ENDIF •

    $default  reduce using rule 22 (statement)


State 101

   23 statement: CASE expression IS cases_ OTHERS ARROW statement_ ENDCASE •

    $default  reduce using rule 23 (statement)


State 102

   33 cases: cases WHEN INT_LITERAL ARROW statement_ •

    $default  reduce using rule 33 (cases)
